force-app/main/default/objects/Quote/fields/Amortized_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Amortized_Term_Months__c</fullName>
    <label>Amortized Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>