force-app/main/default/objects/Quote/fields/Annual_Increase__c.field-meta.xml
<CustomField>
    <fullName>Annual_Increase__c</fullName>
    <description>Annual percent increase on the contract</description>
    <label>Annual % Increase</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>