force-app/main/default/objects/Quote/fields/Booked_MRR__c.field-meta.xml
<CustomField>
    <fullName>Booked_MRR__c</fullName>
    <description>The first year&apos;s monthly price. Auto calculated</description>
    <label>Booked MRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>