force-app/main/default/objects/Quote/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <formula>Contact.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Title</label>
    <type>Text</type>
</CustomField>