force-app/main/default/objects/Quote/fields/Contract_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Months__c</fullName>
    <label>Contract Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>