force-app/main/default/objects/Quote/fields/Cybersecurity_Margin__c.field-meta.xml
<CustomField>
    <fullName>Cybersecurity_Margin__c</fullName>
    <label>Cybersecurity Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>