force-app/main/default/objects/Quote/fields/Cybersecurity_Principal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cybersecurity_Principal_Amount__c</fullName>
    <label>Cybersecurity Principal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>