force-app/main/default/objects/Quote/fields/Infrastructure_Margin__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Margin__c</fullName>
    <label>Infrastructure Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>