force-app/main/default/objects/Quote/fields/Managed_Security_Awareness_Program_Fee__c.field-meta.xml
<CustomField>
    <fullName>Managed_Security_Awareness_Program_Fee__c</fullName>
    <label>Managed Security Awareness Program Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>