force-app/main/default/objects/Quote/fields/Monitoring_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Fee__c</fullName>
    <label>Monitoring Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>