force-app/main/default/objects/Quote/fields/Monitoring_Licensing_Total__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Licensing_Total__c</fullName>
    <label>Monitoring Licensing Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>