force-app/main/default/objects/Quote/fields/MS_Product_Discount_Requires_Executive__c.field-meta.xml
<CustomField>
    <fullName>MS_Product_Discount_Requires_Executive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MS Product Discount Requires Executive</label>
    <type>Checkbox</type>
</CustomField>