force-app/main/default/objects/Quote/fields/Number_of_User__c.field-meta.xml
<CustomField>
    <fullName>Number_of_User__c</fullName>
    <description>Number of Users for the Quote</description>
    <label>Number of User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>