force-app/main/default/objects/Quote/fields/Onboarding_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding Fee Waived</label>
    <type>Checkbox</type>
</CustomField>