force-app/main/default/objects/Quote/fields/Onboarding_Margin__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Margin__c</fullName>
    <label>Onboarding Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>