force-app/main/default/objects/Quote/fields/OriginalActionType__c.field-meta.xml
<CustomField>
    <fullName>OriginalActionType__c</fullName>
    <formula>TEXT(OriginalActionType)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OriginalActionType</label>
    <type>Text</type>
</CustomField>