force-app/main/default/objects/Quote/fields/Per_User_Price__c.field-meta.xml
<CustomField>
    <fullName>Per_User_Price__c</fullName>
    <description>The Price Per User</description>
    <label>Per User Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>