force-app/main/default/objects/Quote/fields/Prepared_by_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Prepared_by_Full_Name__c</fullName>
    <formula>$User.FirstName + $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prepared by (Full Name)</label>
    <type>Text</type>
</CustomField>