force-app/main/default/objects/Quote/fields/Private_Cloud_Margin__c.field-meta.xml
<CustomField>
    <fullName>Private_Cloud_Margin__c</fullName>
    <label>Private Cloud Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>