force-app/main/default/objects/Quote/fields/Requires_Executive_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Executive_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Executive Approval</label>
    <type>Checkbox</type>
</CustomField>