force-app/main/default/objects/Quote/fields/Service_Desk_Margin__c.field-meta.xml
<CustomField>
    <fullName>Service_Desk_Margin__c</fullName>
    <label>Service Desk Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>