force-app/main/default/objects/Quote/fields/Service_Desk_Principal_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Service_Desk_Principal_Monthly__c</fullName>
    <label>Service Desk Principal Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>