force-app/main/default/objects/Quote/fields/VOIP_Margin__c.field-meta.xml
<CustomField>
    <fullName>VOIP_Margin__c</fullName>
    <label>VOIP Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>