force-app/main/default/objects/Quote/validationRules/Minimum_Dollar_Enforcement_Managed_Secur.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Dollar_Enforcement_Managed_Secur</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED(Managed_Security_Awareness_Program_Fee__c), 
    NOT(ISBLANK(Managed_Security_Awareness_Program_Fee__c)),
    Managed_Security_Awareness_Program_Fee__c /Contract_Term_Months__c  &lt; 250
)</errorConditionFormula>
    <errorMessage>Combined monthly total of Managed Security Lines cannot be less than $250.</errorMessage>
</ValidationRule>