force-app/main/default/objects/Quote/validationRules/Minimum_Dollar_Enforcement_Monitoring.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Dollar_Enforcement_Monitoring</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    NOT(ISBLANK(Monitoring_Fee__c)),
    (Monitoring_Fee__c/ Contract_Term_Months__c)  &lt; 350
)</errorConditionFormula>
    <errorMessage>Combined monthly total of Monitoring Lines cannot be less than $350.</errorMessage>
</ValidationRule>